Better folding for elvis operator